    . Make ->set_visible actually use ->field()
      so it can also set select fields?!
    . Make ->set_visible also support select+option inputs

0.59 to be released
    + Report Javascript errors from the perspective of the caller
      instead of a location in WWW::Mechanize::Firefox
    ! ->wait_until_invisible() requeries selectors now instead
      of only querying them once.
0.58 20111128
    ! Fix cookie handling which was weirdly broken yet the tests passed.
      Session cookies now get returned
      Thanks to blakew for pointing that out
0.57 20111102
    . Make relative queries work for ->selector()
      with "node => $foo"
      Reported by Rolf Langsdorf
0.56 20111031
    . Make "frames => 0" work in constructor (+test)
0.55 20110728
    . Re-release of 0.54, this time including t/helper.pm for the tests

0.54 20110726
    + Bugfix: Tabs on FF4+ now only get closed once, preventing FF lockups
    + Bugfix: ->set_visible now also finds input fields without "type" attribute
    . ->set_visible() now also has tests
    
    + WWW::Mechanize::Firefox is currently tested against the following versions
        - 3.0.19
        - 3.5.19
        - 3.6.19
        - 4.0.1
        - 5.0.1
        - 6.0 Beta
    . The tests can now run against other Firefox installations under
        firefox-versions/(v.v.v)/FirefoxPortable.exe
    . The search glob for Firefox versions to run the tests against can
      be set via $ENV{TEST_WWW_MECHANIZE_FIREFOX_VERSIONS}
      The default is firefox-versions/*/FirefoxPortable*

0.53 20110701
    ! Renamed ff-scrape.pl to scrape-ff.pl
    . scrape-ff.pl now supports attribute selection with CSS selectors
    + Bugfix: ->form_with_fields() ignored textarea and select fields

0.52 20110509
    . Remove traces of Firefox 4 being unsupported
    . Added license to API35.pm and API40.pm
    . Upgrade local test server to more current incarnation
    . Eliminate almost all tests that need an outside network connection